# rust-notebook

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  db.rs  main.rs  notebook.rs  tasks.rs
