[package]
name = "notebook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ctrlc"
path = "./src/bin/ctrlc.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.127", features = ["derive"] }
ctrlc = "3.2.0"